array.island.Island.scala.error
Erreur de compilation :
Island:5: error: ';' expected but ')' found.
  for (n <- 1 to 'num.size)-1) {
                             ^